<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/body_weight_layout"
    style="@style/Layout"
    tools:context=".BodyWeight">

    <TextView
        android:id="@+id/body_weight_TV"
        style="@style/TextViewNumberLbl"
        android:layout_marginStart="16dp"
        android:labelFor="@id/body_weight_ET"
        android:text="@string/body_weight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/body_weight_ET"
        style="@style/EditTextNumberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body_weight_TV" />

    <Button
        android:id="@+id/body_weight_save_Btn"
        style="@style/Button"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/body_weight_cancel_Btn"
        style="@style/Button"
        android:layout_marginEnd="12dp"
        android:text="@string/exit"
        app:layout_constraintEnd_toStartOf="@id/body_weight_save_Btn"
        app:layout_constraintTop_toTopOf="@id/body_weight_save_Btn" />

</androidx.constraintlayout.widget.ConstraintLayout>