<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_heart_rate"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/main_blood_pressure_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_blood_pressure"
        android:background="@drawable/background_image_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_body_weight_Btn"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/ic_main_blood_pressure" />

    <ImageButton
        android:id="@+id/main_body_weight_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_body_weight"
        android:background="@drawable/background_image_button"
        app:layout_constraintEnd_toStartOf="@+id/main_glucose_level_Btn"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/main_blood_pressure_Btn"
        app:layout_constraintTop_toTopOf="@+id/main_blood_pressure_Btn"
        app:srcCompat="@drawable/ic_main_weight" />

    <ImageButton
        android:id="@+id/main_glucose_level_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_glucose_level"
        android:background="@drawable/background_image_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/main_body_weight_Btn"
        app:layout_constraintTop_toTopOf="@+id/main_blood_pressure_Btn"
        app:srcCompat="@drawable/ic_main_glucose_level" />

    <ImageButton
        android:id="@+id/main_statistic_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/main_statistic"
        android:background="@drawable/background_image_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_body_weight_Btn"
        app:srcCompat="@drawable/ic_main_statistic" />

    <ImageButton
        android:id="@+id/main_settings_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/settings"
        android:background="@drawable/background_small_image_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_main_settings" />

    <TextView
        style="@style/TextViewButtonLbl"
        android:text="@string/main_blood_pressure"
        app:layout_constraintTop_toBottomOf="@id/main_blood_pressure_Btn"
        app:layout_constraintStart_toStartOf="@id/main_blood_pressure_Btn"
        app:layout_constraintEnd_toEndOf="@id/main_blood_pressure_Btn" />

    <TextView
        style="@style/TextViewButtonLbl"
        android:text="@string/main_body_weight"
        app:layout_constraintTop_toBottomOf="@id/main_body_weight_Btn"
        app:layout_constraintStart_toStartOf="@id/main_body_weight_Btn"
        app:layout_constraintEnd_toEndOf="@id/main_body_weight_Btn" />

    <TextView
        style="@style/TextViewButtonLbl"
        android:text="@string/main_glucose_level"
        app:layout_constraintTop_toBottomOf="@id/main_glucose_level_Btn"
        app:layout_constraintStart_toStartOf="@id/main_glucose_level_Btn"
        app:layout_constraintEnd_toEndOf="@id/main_glucose_level_Btn" />

    <TextView
        style="@style/TextViewButtonLbl"
        android:text="@string/main_statistic"
        app:layout_constraintTop_toBottomOf="@id/main_statistic_Btn"
        app:layout_constraintStart_toStartOf="@id/main_statistic_Btn"
        app:layout_constraintEnd_toEndOf="@id/main_statistic_Btn" />
</androidx.constraintlayout.widget.ConstraintLayout>