<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/glucose_level_layout"
    style="@style/Layout"
    tools:context=".GlucoseLevel">

    <TextView
        android:id="@+id/glucose_level_mmol_TV"
        style="@style/TextViewNumberLbl"
        android:layout_marginStart="16dp"
        android:labelFor="@id/glucose_level_mmol_ET"
        android:text="@string/glucose_level_mmol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/glucose_level_mg_TV"
        style="@style/TextViewNumberLbl"
        android:labelFor="@id/glucose_level_mg_ET"
        android:text="@string/glucose_level_mg"
        app:layout_constraintStart_toStartOf="@+id/glucose_level_mmol_TV"
        app:layout_constraintTop_toBottomOf="@+id/glucose_level_mmol_ET" />

    <EditText
        android:id="@+id/glucose_level_mmol_ET"
        style="@style/EditTextNumberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glucose_level_mmol_TV" />

    <EditText
        android:id="@+id/glucose_level_mg_ET"
        style="@style/EditTextNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glucose_level_mg_TV" />

    <Button
        android:id="@+id/glucose_level_save_Btn"
        style="@style/Button"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/glucose_level_cancel_Btn"
        style="@style/Button"
        android:layout_marginEnd="32dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/glucose_level_save_Btn"
        app:layout_constraintTop_toTopOf="@id/glucose_level_save_Btn" />
</androidx.constraintlayout.widget.ConstraintLayout>