<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <ImageButton
        android:id="@+id/settings_language_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/settings_change_language"
        android:background="@drawable/background_small_image_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/ic_settings_language" />

    <ImageButton
        android:id="@+id/settings_sync_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/settings_sync_data"
        android:background="@drawable/background_small_image_button"
        app:layout_constraintStart_toStartOf="@+id/settings_language_Btn"
        app:layout_constraintTop_toBottomOf="@+id/settings_language_Btn"
        app:srcCompat="@drawable/ic_settings_sync" />

    <TextView
        style="@style/TextViewButtonLbl"
        android:text="@string/settings_change_language"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/settings_language_Btn"
        app:layout_constraintStart_toEndOf="@id/settings_language_Btn"
        app:layout_constraintBottom_toBottomOf="@id/settings_language_Btn" />

    <TextView
        style="@style/TextViewButtonLbl"
        android:text="@string/settings_sync_data"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/settings_sync_Btn"
        app:layout_constraintStart_toEndOf="@id/settings_sync_Btn"
        app:layout_constraintBottom_toBottomOf="@id/settings_sync_Btn" />

    <Button
        android:id="@+id/settings_cancel_Btn"
        style="@style/Button"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>